# mincodec

./: Cargo.toml  search-index.js
implementors/mincodec/: trait.MinCodecRead.js
mincodec/: enum.AsyncReaderError.html  enum.AsyncWriterError.html  enum.BufPoll.html  enum.MapDeserializeError.html  enum.MapSerializeError.html  enum.OptionDeserialize.html  enum.ReadImmediateError.html  enum.WriteImmediateError.html  index.html  struct.AsyncReader.html  struct.AsyncWriter.html  struct.Incomplete.html  struct.MapDeserialize.html  struct.MapSerialize.html  struct.ReadImmediate.html  struct.WriteImmediate.html  trait.Deserialize.html  trait.MinCodec.html  trait.MinCodecRead.html  trait.MinCodecReadExt.html  trait.MinCodecWrite.html  trait.MinCodecWriteExt.html  trait.Serialize.html
mincodec/allocated/: enum.StringReadError.html  enum.VecReadError.html  struct.BytesSerialize.html  struct.StringDeserialize.html  struct.VecDeserialize.html  struct.VecSerialize.html
mincodec/array/: struct.Array0001Deserialize.html  struct.Array0001Serialize.html  struct.Array0002Deserialize.html  struct.Array0002Serialize.html  struct.Array0003Deserialize.html  struct.Array0003Serialize.html  struct.Array0004Deserialize.html  struct.Array0004Serialize.html  struct.Array0005Deserialize.html  struct.Array0005Serialize.html  struct.Array0006Deserialize.html  struct.Array0006Serialize.html  struct.Array0007Deserialize.html  struct.Array0007Serialize.html  struct.Array0008Deserialize.html  struct.Array0008Serialize.html  struct.Array0009Deserialize.html  (+63 more)
src/: lib.rs
src/mincodec/: lib.rs.html
(+88 files in other folders)
